--- a/src/main/resources/templates/kaohe/allModule.html
+++ b/src/main/resources/templates/kaohe/allModule.html
@@ -1,176 +1,100 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset="UTF-8">
-	<title>考核实验设置</title>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}" />
-	<link rel="stylesheet" type="text/css" th:href="@{/css/page.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
-	<style>
-		.text-overflow {
-			display:block;/*内联对象需加*/
-			width:31em;/*指定宽度*/
-			word-break:keep-all;/* 不换行 */
-			white-space:nowrap;/* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-			overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-			text-overflow:ellipsis;/* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-		}
-
-		table{
-			width:30em;
-			table-layout:fixed;/* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-		}
-		td{
-			width:100%;
-			word-break:keep-all;/* 不换行 */
-			white-space:nowrap;/* 不换行 */
-			overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-			text-overflow:ellipsis;/* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-		}
-
-		.layui-table th {
-			text-align: center;
-			font-weight: 900;
-		}
-	</style>
-</head>
-<body>
-<div id="app" class="layui-container">
-
-	<a th:href="${selected2}">
-		<button type="button" class="layui-btn layui-btn-primary" style="border-color: #174f37;color: #174f37;"
-				>考核模块
-		</button>
-	</a>
-	<a th:href="${selected1}">
-		<button type="button" class="layui-btn layui-btn-primary" style="border-color: #174f37;color: #ffffff;background: #009688">全部模块
-		</button>
-	</a>
-	<select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')" style="margin-top: 13px;">
-		<option th:value="|/kaohemodel/Module/-1|">--请选择--</option>
-		<div th:each="arrangeInfo:${arrangeInfoDTOs}" >
-			<option th:value="|/kaohemodel/Module/${arrangeInfo.getArrangeId()}|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" th:if="${arrangeInfo.getArrangeId() ne selected}">18信管01</option>
-			<option th:value="|/kaohemodel/Module/${arrangeInfo.getArrangeId()}|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" selected="selected" th:if="${arrangeInfo.getArrangeId() eq selected}">18信管01</option>
-		</div>
-	</select>
-
-	<div th:if="${Choose}">
-		<div class="layui-form">
-			<table class="layui-table">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>考核实验设置</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			.layui-form-item .layui-input-inline {
+				width: auto;
+			}
+			.layui-form-label {
+				width: auto;
+				padding-left: 0;
+			}
+			#pager {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<form class="layui-form">
+				<div class="layui-form-item">
+					<div class="layui-input-inline">
+						<a th:href="${selected2}" class="layui-btn layui-btn-primary">考核模块</a>
+						<a th:href="${selected1}" class="layui-btn">全部模块</a>
+					</div>
+					<label class="layui-form-label">课程班级</label>
+					<div class="layui-input-inline">
+						<select name="interest" lay-filter="id">
+							<option value="">请选择课程班级</option>
+							<option th:each="arrangeInfo:${arrangeInfoDTOs}" th:selected="${arrangeInfo.getArrangeId() == selected}" th:value="|/kaohemodel/Module/${arrangeInfo.getArrangeId()}|" th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}"></option>
+						</select>
+					</div>
+				</div>
+			</form>
+			<table class="layui-table" th:if="${Choose}">
 				<thead>
-				<tr>
-					<th width="5%">ID</th>
-					<th>实验名</th>
-					<th>实验类型</th>
-					<th>实验目的</th>
-					<th width="7%">课时</th>
-					<th>操作</th>
-				</tr>
+					<tr>
+						<th>ID</th>
+						<th>实验名</th>
+						<th>实验类型</th>
+						<th>实验目的</th>
+						<th>课时</th>
+						<th>操作</th>
+					</tr>
 				</thead>
 				<tbody>
-				<tr align="center" th:each="b:${allKaohe}">
-					<td th:text="${b.getM_id()}">1</td>
-					<td th:text="${b.getM_name()}">模块1</td>
-					<td th:text="${b.getM_type()}">拓展创新</td>
-					<td th:text="${b.getPurpose()}">拓展创新</td>
-					<td th:text="${b.getClasshour()}">32</td>
-					<td >
-<!--						<a th:href="@{|/kaohemodel/${b.getM_id()}/${selected}/moveIn|}" th:if="${!b.isNeedKaohe()}" ><button type="add"  @click="isTrue" class="layui-btn layui-btn-sm" >移入考核</button></a>-->
-						<a th:href="@{|/kaohemodel/${b.getM_id()}/${selected}/moveIn|}" th:if="${!b.isNeedKaohe()}" ><button type="add"  class="layui-btn layui-btn-sm" >移入考核</button></a>
-					</td>
-				</tr>
-
+					<tr th:each="b:${allKaohe}">
+						<td th:text="${b.getM_id()}"></td>
+						<td th:text="${b.getM_name()}"></td>
+						<td th:text="${b.getM_type()}"></td>
+						<td th:text="${b.getPurpose()}"></td>
+						<td th:text="${b.getClasshour()}"></td>
+						<td>
+							<a class="layui-btn layui-btn-sm" th:href="@{|/kaohemodel/${b.getM_id()}/${selected}/moveIn|}" th:if="${!b.isNeedKaohe()}">移入考核</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
+			<div id="pager" th:if="${Choose}"></div>
+			<input type="hidden" id="totalPage" th:if="${Choose}" th:value="${allKaohe.getTotalPages()}" />
+			<input type="hidden" id="currentPage" th:if="${Choose}" th:value="${allKaohe.pageable.getPageNumber()}" />
 		</div>
-
-<!--		<div class="modal-footer no-margin-top">-->
-<!--			<ul class="pagination pull-right no-margin">-->
-
-<!--				&lt;!&ndash; 首页 &ndash;&gt;-->
-<!--				<li>-->
-<!--					<a th:href="'/kaohemodel/allModule?pageNum=0'">首页</a>-->
-<!--				</li>-->
-
-<!--				&lt;!&ndash; 上一页 &ndash;&gt;-->
-<!--				<li th:if="${allKaohe.hasPrevious()}">-->
-<!--					<a th:href="'/kaohemodel/allModule?pageNum=' + ${allKaohe.previousPageable().getPageNumber()}" th:text="上一页"></a>-->
-<!--				</li>-->
-
-<!--				&lt;!&ndash; 中间页 &ndash;&gt;-->
-<!--				<li th:each="pageNum:${#numbers.sequence(0, allKaohe.getTotalPages() - 1)}">-->
-<!--					<a th:href="'/kaohemodel/allModule?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum ne allKaohe.pageable.getPageNumber()}"></a>-->
-<!--					<a th:href="'/kaohemodel/allModule?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum eq allKaohe.pageable.getPageNumber()}" th:style="'font-weight:bold;background: #6faed9;'"></a>-->
-<!--				</li>-->
-
-<!--				&lt;!&ndash; 下一页 &ndash;&gt;-->
-<!--				<li th:if="${allKaohe.hasNext()}">-->
-<!--					<a th:href="'/kaohemodel/allModule?pageNum=' + ${allKaohe.nextPageable().getPageNumber()}" th:text="下一页"></a>-->
-<!--				</li>-->
-
-<!--				&lt;!&ndash; 尾页 &ndash;&gt;-->
-<!--				<li>-->
-<!--					<a th:href="'/kaohemodel/allModule?pageNum=' + ${allKaohe.getTotalPages() - 1}">尾页</a>-->
-<!--				</li>-->
-
-<!--			</ul>-->
-<!--		</div>-->
-		<div class="modal-footer no-margin-top " th:if="${needPaging}">
-			<ul class="pagination pull-right no-margin">
-
-				<!-- 首页 -->
-				<li>
-					<a th:href="${path}+'?pageNum=0'">首页</a>
-				</li>
-
-				<!-- 上一页 -->
-				<li th:if="${allKaohe.hasPrevious()}">
-					<a th:href="${path}+'?pageNum=' + ${allKaohe.previousPageable().getPageNumber()}" th:text="上一页"></a>
-				</li>
-
-				<!-- 中间页 -->
-				<li th:each="pageNum:${#numbers.sequence(0, allKaohe.getTotalPages() - 1)}">
-					<a th:href="${path}+'?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum ne allKaohe.pageable.getPageNumber()}"></a>
-					<a th:href="${path}+'?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum eq allKaohe.pageable.getPageNumber()}" th:style="'font-weight:bold;background: #6faed9;'"></a>
-				</li>
-
-				<!-- 下一页 -->
-				<li th:if="${allKaohe.hasNext()}">
-					<a th:href="${path}+'?pageNum=' + ${allKaohe.nextPageable().getPageNumber()}" th:text="下一页"></a>
-				</li>
-
-				<!-- 尾页 -->
-				<li>
-					<a th:href="${path}+'?pageNum=' + ${allKaohe.getTotalPages() - 1}">尾页</a>
-				</li>
-
-			</ul>
-		</div>
-	</div>
-
-	<div th:if="${not Choose}">
-		<p>请选择课程安排</p>
-	</div>
-</div>
-<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
-<script th:src="@{/js/layui.all.js}" type="text/javascript" charset="utf-8"></script>
-<script th:src="@{/js/vue.js}" type="text/javascript" charset="utf-8"></script>
-<script th:src="@{/js/jquery.min.js}" type="text/javascript" charset="utf-8"></script>
-<script th:src="@{/js/jquery.z-pager.js}" type="text/javascript" charset="utf-8"></script>
-<script>
-	var app = new Vue({
-		el:"#app",
-
-		methods:{
-			isTrue:function(){
-				confirm("确认移入考核？")
-			}
-		}
-	})
-
-
-
-</script>
-
-</body>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var form = layui.form,
+					laypage = layui.laypage
+				laypage.render({
+					elem: 'pager',
+					curr: parseInt($('#currentPage').val()),
+					count: parseInt($('#totalPage').val()) * 10,
+					jump: function (obj, first) {
+						if (!first) {
+							window.location.href = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+						}
+					}
+				})
+				form.on('select(id)', function (data) {
+					if (data.value) {
+						window.location.href = data.value
+					}
+				})
+			})
+		</script>
+	</body>
 </html>
