--- a/src/main/resources/templates/kaohe/score2_manage.html
+++ b/src/main/resources/templates/kaohe/score2_manage.html
@@ -1,326 +1,107 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>模块测试成绩管理</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../../static/css/layui.css" media="all">
-    <link rel="stylesheet" type="text/css" href="../../static/css/page.css"/>
-    <link rel="stylesheet" type="text/css" href="../../static/css/code.css"/>
-
-    <link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css"/>
-    <style type="text/css">
-        * {
-            margin: 0;
-            padding: 0
-        }
-
-        .table-wrapper {
-            overflow-x: scroll;
-            overflow-y: visible;
-            /*width: 230px;*/
-            /*margin-left: 120px;*/
-            /*border: 1px solid #f00;*/
-            margin: 0 auto;
-            width: 930px;
-        }
-
-        .table-wrapper td,
-        th {
-            /*padding: 5px 20px;*/
-            width: 100px;
-        }
-
-        .text-overflow {
-            display: block; /*内联对象需加*/
-            width: 31em; /*指定宽度*/
-            word-break: keep-all; /* 不换行 */
-            white-space: nowrap; /* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-            overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
-            text-overflow: ellipsis; /* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-        }
-
-        table {
-            width: 30em;
-            table-layout: fixed; /* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-        }
-
-        td {
-            width: 100%;
-            word-break: keep-all; /* 不换行 */
-            white-space: nowrap; /* 不换行 */
-            overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
-            text-overflow: ellipsis; /* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-        }
-
-
-        .layui-form-label {
-            width: 100px;
-            /*padding: 0;*/
-            /*line-height: 40px;*/
-        }
-
-        .ak {
-            margin-left: 0px;
-        }
-
-        .layui-table th {
-            text-align: center;
-            font-weight: 900;
-        }
-
-        .top2 th {
-            text-align: center;
-            font-weight: 900;
-        }
-
-        .top1 th {
-            text-align: center;
-            font-weight: 500;
-        }
-
-        .top1 .layui-form-label {
-            font-weight: 900;
-        }
-
-        .top1 {
-            width: 90%;
-            margin: 0 auto;
-        }
-    </style>
-</head>
-<body>
-<div class="layui-container">
-    <!--			<img src="../../static/images/LOGO2.png"> <br><br>-->
-    <!--			<span class="layui-breadcrumb">-->
-    <!--  			<a href="/">首页</a>-->
-    <!--  			&lt;!&ndash;<a href="/demo/">轮播公告</a>&ndash;&gt;-->
-    <!--  			<a><cite>模块测试成绩管理</cite></a>-->
-    <!--			</span> <br><br><br>-->
-
-    <table class="top1" lay-size="lg" style="    text-align: center;">
-        <!--				<colgroup>-->
-        <!--					<col width="150">-->
-        <!--					<col width="200">-->
-        <!--					<col>-->
-        <!--				</colgroup>-->
-
-        <tr>
-            <th colspan="3">
-
-                <div class="layui-form-item">
-                    <!--									<label class="layui-form-label" style="padding-top: 20px;">班级筛选</label>-->
-                    <!--									<div class="layui-input-block" style="width: 17%;">-->
-                    <!--										<select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')" style="margin-top: 15px;height: 30px;width: 100px;border-color: lightgray;">-->
-                    <!--												<option>请选择</option>-->
-                    <!--											<div th:each="clazz:${classList}" >-->
-                    <!--												<option th:value="|/reportScoreManage/${clazz.getClassId()}/list|"  th:text="${clazz.getClassName()}">18信管01</option>-->
-                    <!--											</div>-->
-                    <!--										</select>-->
-
-                    <!--									</div>-->
-                    <a>
-                        <button type="button" class="layui-btn layui-btn-primary"
-                                style="border-color: #174f37;color: #ffffff;background: #009688">课程班级选择
-                        </button>
-                    </a>
-                    <select name="interest" lay-filter="aihao"
-                            onchange="window.open(this.options[this.selectedIndex].value,target='_self')"
-                            style="margin-top: 13px;">
-                        <option th:value="|/reportScoreManage/report/-1|">--请选择--</option>
-                        <div th:each="arrangeInfo:${arrangeInfoDTOs}">
-                            <option th:value="|/reportScoreManage/report/${arrangeInfo.getArrangeId()}|"
-                                    th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}"
-                                    th:if="${arrangeInfo.getArrangeId() ne selected}">18信管01
-                            </option>
-                            <option th:value="|/reportScoreManage/report/${arrangeInfo.getArrangeId()}|"
-                                    th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}"
-                                    selected="selected" th:if="${arrangeInfo.getArrangeId() eq selected}">18信管01
-                            </option>
-                        </div>
-                    </select>
-                </div>
-            </th>
-
-            <th colspan="3">
-                <!--                <form th:action="@{/reportScoreManage/list}">-->
-                <!--                    <li>-->
-                <!--                        <div class="layui-input-block ak" style="float: left; position: relative;">-->
-                <!--                            <label class="layui-form-label ">学号搜索</label>-->
-                <!--                            <input style="width: auto;" type="text" th:value="${select_orderId}" id="select_orderId"-->
-                <!--                                   name="select_orderId" lay-verify="required" placeholder="请输入学号" autocomplete="off"-->
-                <!--                                   class="layui-input">-->
-                <!--                        </div>-->
-                <!--                        <button class="layui-btn" lay-submit="" id="searchBtn" data-type="getInfo" style="float: left;">-->
-                <!--                            搜索-->
-                <!--                        </button>-->
-
-                <!--                    </li>-->
-
-                <!--                </form>-->
-                <!--							<a th:action="@{/reportScoreManage/exportExcel}">-->
-                <!--								<button type="导出" class="layui-btn" lay-submit="" lay-filter="demo1">导出</button>-->
-                <!--							</a>-->
-            </th>
-        </tr>
-
-    </table>
-    <div class="table-wrapper" th:if="${Choose} ">
-        <table id="consumption-data" class="layui-table data top2" lay-size="lg" style="text-align: center;">
-            <!--				<colgroup>-->
-            <!--					<col width="150">-->
-            <!--					<col width="200">-->
-            <!--					<col>-->
-            <!--				</colgroup>-->
-            <thead class="header">
-
-            <tr>
-                <th width="7%">学号</th>
-                <th>姓名</th>
-                <th>班级ID</th>
-                <div th:each="a:${numList}">
-                    <th>模块名</th>
-                    <th>报告成绩</th>
-                    <th>状态</th>
-                    <th width="46px">操作</th>
-                </div>
-
-
-            </tr>
-            </thead>
-            <tbody class="results">
-            <!--				th:each="one:${allInfo}"-->
-            <div th:each="class:${classList}">
-                <tr th:each="one:${allStu}" th:if="${one.getClassId()} == ${class.getClassId()}">
-                    <td><p th:text="${one.getStuXuehao()}" style="margin-left: -35%;">12345678</p></td>
-                    <td><p th:text="${one.getStuName()}">12345678</p></td>
-                    <td><p th:text="${one.getClassId()}">12345678</p></td>
-                    <div th:each="stuInfo,stat:${allInfo}" th:if="${stuInfo.getSid()} == ${one.getId()}">
-                        <td th:if="${stat.index >= 0}"><p th:text="${stuInfo.getmName()}">12345678</p></td>
-                        <td th:if="${stat.index >= 0}"><p th:text="${stuInfo.getmScore()}">12345678</p></td>
-                        <td th:if="${stat.index >= 0}"><p th:text="${stuInfo.isDone()}?'完成':'未完成'">12345678</p></td>
-                        <td th:if="${stat.index >= 0}" width="46px">
-                            <div th:if="${stuInfo.isDone()}">
-                                <a th:href="|/TreportGrade/${one.getId()}/${stuInfo.getMid()}/${selected}/giveMark|"
-                                   th:if="not ${stuInfo.isReportType()}">
-                                    <button class="layui-btn" lay-submit="" lay-filter="demo1">自定义版评分</button>
-                                </a>
-                                <a th:href="|/collegereportmark/${stuInfo.getMid()}/${one.getId()}/${selected}|"
-                                   th:if="${stuInfo.isReportType()}">
-                                    <button class="layui-btn" lay-submit="" lay-filter="demo1">学院版评分</button>
-                                </a>
-                            </div>
-                            <div th:if="not ${stuInfo.isDone()}">
-                                <button  class="layui-btn" lay-submit="" lay-filter="demo1">学生未完成</button>
-                            </div>
-                        </td>
-
-                    </div>
-                </tr>
-            </div>
-            </tbody>
-        </table>
-    </div>
-
-<!--    <div class="modal-footer no-margin-top" th:if="${ Choose} ">-->
-<!--        <ul class="pagination pull-right no-margin">-->
-
-<!--            &lt;!&ndash; 首页 &ndash;&gt;-->
-<!--            <li>-->
-<!--                <a th:href="'/reportScoreManage/list?pageNum=0'">首页</a>-->
-<!--            </li>-->
-
-<!--            &lt;!&ndash; 上一页 &ndash;&gt;-->
-<!--            <li th:if="${allStu.hasPrevious()}">-->
-<!--                <a th:href="'/reportScoreManage/list?pageNum=' + ${allStu.previousPageable().getPageNumber()}"-->
-<!--                   th:text="上一页"></a>-->
-<!--            </li>-->
-
-<!--            &lt;!&ndash; 中间页 &ndash;&gt;-->
-<!--            <li th:each="pageNum:${#numbers.sequence(0, allStu.getTotalPages() - 1)}">-->
-<!--                <a th:href="'/reportScoreManage/list?pageNum=' + ${pageNum}" th:text="${pageNum + 1}"-->
-<!--                   th:if="${pageNum ne allStu.pageable.getPageNumber()}"></a>-->
-<!--                <a th:href="'/reportScoreManage/list?pageNum=' + ${pageNum}" th:text="${pageNum + 1}"-->
-<!--                   th:if="${pageNum eq allStu.pageable.getPageNumber()}"-->
-<!--                   th:style="'font-weight:bold;background: #6faed9;'"></a>-->
-<!--            </li>-->
-
-<!--            &lt;!&ndash; 下一页 &ndash;&gt;-->
-<!--            <li th:if="${allStu.hasNext()}">-->
-<!--                <a th:href="'/reportScoreManage/list?pageNum=' + ${allStu.nextPageable().getPageNumber()}"-->
-<!--                   th:text="下一页"></a>-->
-<!--            </li>-->
-
-<!--            &lt;!&ndash; 尾页 &ndash;&gt;-->
-<!--            <li>-->
-<!--                <a th:href="'/reportScoreManage/list?pageNum=' + ${allStu.getTotalPages() - 1}">尾页</a>-->
-<!--            </li>-->
-
-<!--        </ul>-->
-<!--    </div>-->
-
-    <div class="modal-footer no-margin-top " th:if="${needPaging}">
-        <ul class="pagination pull-right no-margin">
-
-            <!-- 首页 -->
-            <li>
-                <a th:href="${path}+'?pageNum=0'">首页</a>
-            </li>
-
-            <!-- 上一页 -->
-            <li th:if="${allStu.hasPrevious()}">
-                <a th:href="${path}+'?pageNum=' + ${allStu.previousPageable().getPageNumber()}" th:text="上一页"></a>
-            </li>
-
-            <!-- 中间页 -->
-            <li th:each="pageNum:${#numbers.sequence(0, allStu.getTotalPages() - 1)}">
-                <a th:href="${path}+'?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum ne allStu.pageable.getPageNumber()}"></a>
-                <a th:href="${path}+'?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum eq allStu.pageable.getPageNumber()}" th:style="'font-weight:bold;background: #6faed9;'"></a>
-            </li>
-
-            <!-- 下一页 -->
-            <li th:if="${allStu.hasNext()}">
-                <a th:href="${path}+'?pageNum=' + ${allStu.nextPageable().getPageNumber()}" th:text="下一页"></a>
-            </li>
-
-            <!-- 尾页 -->
-            <li>
-                <a th:href="${path}+'?pageNum=' + ${allStu.getTotalPages() - 1}">尾页</a>
-            </li>
-
-        </ul>
-    </div>
-</div>
-
-<!--		<div style="text-align: center; margin-top: 2%;">-->
-<!--			<div id="pager" class="pager clearfix">-->
-<!--			</div>-->
-<!--		</div>-->
-
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/vue.js" type="text/javascript" charset="utf-8"></script>
-
-<script src="../../static/js/layui.js" type="text/javascript" charset="utf-8"></script>
-<!--		<script type="text/javascript" src="../../static/layui.all.js" ></script>-->
-<script src="../../static/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/jquery.z-pager.js" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript">
-    $("#pager").zPager({
-        totalData: 50,
-        htmlBox: $('#wraper'),
-        btnShow: true,
-        ajaxSetData: false
-    });
-
-    function currentPage(currentPage) {
-        /*
-            触发页码数位置： Page/js/jquery.z-pager.js 64行
-        */
-        console.log("当前页码数：" + currentPage);
-    }
-</script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>模块测试成绩管理</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			.layui-form-label {
+				width: auto;
+				padding-left: 0;
+			}
+			#pager {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<form class="layui-form">
+				<div class="layui-form-item">
+					<label class="layui-form-label">课程班级</label>
+					<div class="layui-input-inline">
+						<select name="interest" lay-filter="id">
+							<option value="">请选择课程班级</option>
+							<option th:each="arrangeInfo:${arrangeInfoDTOs}" th:value="|/reportScoreManage/report/${arrangeInfo.getArrangeId()}|" th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" th:selected="${arrangeInfo.getArrangeId() == selected}"></option>
+						</select>
+					</div>
+				</div>
+			</form>
+			<table class="layui-table" th:if="${Choose}">
+				<thead>
+					<tr>
+						<th>学号</th>
+						<th>姓名</th>
+						<th>班级ID</th>
+						<div th:each="a:${numList}">
+							<th>模块名</th>
+							<th>报告成绩</th>
+							<th>状态</th>
+							<th>操作</th>
+						</div>
+					</tr>
+				</thead>
+				<tbody>
+					<div th:each="class:${classList}">
+						<tr th:each="one:${allStu}" th:if="${one.getClassId()} == ${class.getClassId()}">
+							<td th:text="${one.getStuXuehao()}" style="margin-left: -35%;"><</td>
+							<td th:text="${one.getStuName()}"></td>
+							<td th:text="${one.getClassId()}"></td>
+							<div th:each="stuInfo,stat:${allInfo}" th:if="${stuInfo.getSid()} == ${one.getId()}">
+								<td th:if="${stat.index >= 0}" th:text="${stuInfo.getmName()}"></td>
+								<td th:if="${stat.index >= 0}" th:text="${stuInfo.getmScore()}"></td>
+								<td th:if="${stat.index >= 0}" th:text="${stuInfo.isDone()}?'完成':'未完成'"></td>
+								<td th:if="${stat.index >= 0}">
+									<div th:if="${stuInfo.isDone()}">
+										<a class="layui-btn" th:href="|/TreportGrade/${one.getId()}/${stuInfo.getMid()}/${selected}/giveMark|" th:if="not ${stuInfo.isReportType()}">自定义版评分</a>
+										<a class="layui-btn" th:href="|/collegereportmark/${stuInfo.getMid()}/${one.getId()}/${selected}|" th:if="${stuInfo.isReportType()}">学院版评分</a>
+									</div>
+									<div th:if="not ${stuInfo.isDone()}">
+										<button class="layui-btn">学生未完成</button>
+									</div>
+								</td>
+							</div>
+						</tr>
+					</div>
+				</tbody>
+			</table>
+			<div id="pager" th:if="${Choose}"></div>
+			<input type="hidden" id="totalPage" th:if="${Choose}" th:value="${allStu.getTotalPages()}" />
+			<input type="hidden" id="currentPage" th:if="${Choose}" th:value="${allStu.pageable.getPageNumber()}" />
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script th:inline="javascript">
+			$(function () {
+				var form = layui.form,
+					laypage = layui.laypage
+				laypage.render({
+					elem: 'pager',
+					curr: parseInt($('#currentPage').val()),
+					count: parseInt($('#totalPage').val()) * 10,
+					jump: function (obj, first) {
+						if (!first) {
+							window.location.href = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+						}
+					}
+				})
+				form.on('select(id)', function (data) {
+					if (data.value) {
+						window.location.href = data.value
+					}
+				})
+			})
+		</script>
+	</body>
 </html>
