--- a/src/main/resources/templates/shiyan/lookLastTest.html
+++ b/src/main/resources/templates/shiyan/lookLastTest.html
@@ -1,221 +1,111 @@
 <!DOCTYPE html>
-<html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>整体模块测试列表</title>
-        <meta name="renderer" content="webkit">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-        <link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
-        <link rel="stylesheet" type="text/css" href="../../static/css/xadmin.css"/>
-        <!--<script src="./lib/layui/layui.js" charset="utf-8"></script>-->
-        <script src="../../static/js/layui.js" type="text/javascript" charset="utf-8"></script>
-    </head>
-    <style>
-        .text-overflow {
-            display:block;/*内联对象需加*/
-            width:31em;/*指定宽度*/
-            word-break:keep-all;/* 不换行 */
-            white-space:nowrap;/* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-            overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-            text-overflow:ellipsis;/* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-        }
-
-        table{
-            width:30em;
-            table-layout:fixed;/* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-        }
-        .layui-table th{
-            text-align: center;
-            font-weight: 900;
-        }
-        td{
-            text-align: center;
-            width:100%;
-            word-break:keep-all;/* 不换行 */
-            white-space:nowrap;/* 不换行 */
-            overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-            text-overflow:ellipsis;/* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-        }
-        #new{
-            margin:2% 0  0 2%;
-        }
-    </style>
-    <body>
-
-        <div class="layui-fluid">
-            <div class="layui-row layui-col-space15">
-                <div class="layui-col-md12">
-                    <div class="layui-card">
-<!--                        <a href="addLastTest.html" th:href="@{|addLastQuest|}">-->
-<!--                            <button type="layui-btn" class="layui-btn layui-bg-green" id="new">新建</button>-->
-<!--                        </a>-->
-
-                        <select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')" style="margin-top: 13px;">
-                            <option th:value="|/shiyan/lastTestList|">--请选择--</option>
-                            <div th:each="arrangeInfo:${arrangeInfoDTOs}" >
-                                <option th:value="|/shiyan/lastTestList/${arrangeInfo.getArrangeId()}|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" th:if="${arrangeInfo.getArrangeId() ne selected}">18信管01</option>
-                                <option th:value="|/shiyan/lastTestList/${arrangeInfo.getArrangeId()}|"  th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}" selected="selected" th:if="${arrangeInfo.getArrangeId() eq selected}">18信管01</option>
-                            </div>
-                        </select>
-
-                        <div th:if="${not Choose}">
-                            <p>请选择课程安排</p>
-                        </div>
-
-                        <div th:if="${Choose}">
-                            <a href="addLastTest.html" th:href="@{|/shiyan/addLastQuest/${arrangeId}|}">
-                                <button type="layui-btn" class="layui-btn layui-bg-green" id="new">新建</button>
-                            </a>
-                            <div class="layui-card-body ">
-                                <form class="layui-form layui-col-space5" method="post">
-
-                                    <!--<div class="layui-inline layui-show-xs-block">-->
-                                        <!--<input type="text" name="search" th:value="${search}" placeholder="请输入实验模块号" autocomplete="off" class="layui-input">-->
-                                    <!--</div>-->
-                                    <!--<div class="layui-inline layui-show-xs-block">-->
-                                        <!--<button class="layui-btn"  lay-submit="" lay-filter="sreach">-->
-                                            <!--<i class="layui-icon">搜索</i></button>-->
-                                    <!--</div>-->
-
-                                    <div class="layui-inline layui-show-xs-block">
-                                        <p th:text="${session.msg2020612}"></p>
-                                    </div>
-
-                                    <!---->
-                                    <!--<div class="layui-inline layui-show-xs-block">
-                                        <a class="layui-btn"  lay-submit="" title="增加" onclick="xadmin.open('增加','班级新增.html')"><i class="layui-icon"></i>增加</a>
-                                    </div>-->
-                                </form>
-                            </div>
-
-                            <div class="layui-card-body ">
-                                <table class="layui-table layui-form">
-                                    <thead>
-                                      <tr>
-
-                                        <th>问题序号</th>
-                                        <th>题目</th>
-                                        <th>分值(链接)</th>
-                                        <th>实验模块号</th>
-                                        <th>问题类型</th>
-                                        <th>操作</th>
-                                    </thead>
-                                    <tbody>
-                                      <tr th:each="Quest:${termList.content}">
-
-                                        <td th:text="${Quest.questOrder}">1</td>
-                                        <td th:text="${Quest.questDescribe}">java</td>
-                                        <td th:text="${Quest.questScore}">100</td>
-                                        <td th:text="${Quest.mId}">1</td>
-                                        <td th:text="${Quest.questType}">单选</td>
-                                        <td class="td-manage">
-                                          <a title="编辑" th:href="@{|/shiyan/updateLastQuest/${Quest.questId}/${arrangeId}|}">
-                                            <!--<i class="layui-icon">&#xe642;</i>-->
-                                            <button type="layui-btn" class="layui-btn layui-bg-green" >修改</button>
-                                          </a>
-                                          <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;" th:href="@{|/shiyan/deleteLastQuest/${Quest.questId}|}">
-                                            <!--<i class="layui-icon">&#xe640;</i>-->
-                                            <button type="layui-btn" class="layui-btn layui-bg-red">删除</button>
-                                          </a>
-                                        </td>
-                                      </tr>
-                                    </tbody>
-                                  </table>
-                            </div>
-                            <div class="layui-card-body ">
-                                <div class="page">
-                                    <div>
-                                      <!--<a class="prev" href="">&lt;&lt;</a>-->
-                                      <!--<a class="num" href="">1</a>-->
-                                      <!--<span class="current">2</span>-->
-                                      <!--<a class="num" href="">3</a>-->
-                                      <!--<a class="num" href="">489</a>-->
-                                      <!--<a class="next" href="">&gt;&gt;</a>-->
-
-                                        <p>当前 <span th:text="${termList.number}+1"></span> 页,
-                                            总 <span th:text="${termList.totalPages}"></span> 页,
-                                            共 <span th:text="${termList.totalElements}"></span> 条记录</p>
-                                        <a th:href="@{/shiyan/lastTestList}">首页</a>
-                                        <a th:href="@{/shiyan/lastTestList(page=${termList.hasPrevious()}?${termList.number}-1:0)}">上一页</a>
-                                        <a th:href="@{/shiyan/lastTestList(page=${termList.hasNext()}?${termList.number}+1:${termList.number})}">下一页</a>
-                                        <a th:href="@{/shiyan/lastTestList(page=${termList.totalPages}-1)}">尾页</a>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> 
-    </body>
-    <script>
-      layui.use(['laydate','form'], function(){
-        var laydate = layui.laydate;
-        var form = layui.form;
-        
-        //执行一个laydate实例
-        laydate.render({
-          elem: '#start' //指定元素
-        });
-
-        //执行一个laydate实例
-        laydate.render({
-          elem: '#end' //指定元素
-        });
-      });
-
-       /*用户-停用*/
-//    function member_stop(obj,id){
-//        layer.confirm('确认要停用吗？',function(index){
-//
-//            if($(obj).attr('title')=='启用'){
-//
-//              //发异步把用户状态进行更改
-//              $(obj).attr('title','停用')
-//              $(obj).find('i').html('&#xe62f;');
-//
-//              $(obj).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('已停用');
-//              layer.msg('已停用!',{icon: 5,time:1000});
-//
-//            }else{
-//              $(obj).attr('title','启用')
-//              $(obj).find('i').html('&#xe601;');
-//
-//              $(obj).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('已启用');
-//              layer.msg('已启用!',{icon: 5,time:1000});
-//            }
-//            
-//        });
-//    }
-
-      /*用户-删除*/
-      function member_del(obj,id){
-          layer.confirm('确认要删除吗？',function(index){
-              //发异步删除数据
-              $(obj).parents("tr").remove();
-              layer.msg('已删除!',{icon:1,time:1000});
-          });
-      }
-
-
-
-      function delAll (argument) {
-
-        var data = tableCheck.getData();
-  
-        layer.confirm('确认要删除吗？'+data,function(index){
-            //捉到所有被选中的，发异步进行删除
-            layer.msg('删除成功', {icon: 1});
-            $(".layui-form-checked").not('.header').parents('tr').remove();
-        });
-      }
-    </script>
-    <script>var _hmt = _hmt || []; (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-      })();</script>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>整体模块测试列表</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			.layui-form-label {
+				width: auto;
+				padding-left: 0;
+			}
+			#pager {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<form class="layui-form">
+				<div class="layui-form-item">
+					<label class="layui-form-label">课程班级</label>
+					<div class="layui-input-inline">
+						<select name="interest" lay-filter="id">
+							<option value="">请选择课程班级</option>
+							<option th:each="arrangeInfo:${arrangeInfoDTOs}" th:selected="${arrangeInfo.getArrangeId() == selected}" th:value="|/shiyan/lastTestList/${arrangeInfo.getArrangeId()}|" th:text="${arrangeInfo.getCourseName()+'-'+arrangeInfo.getClassName()}"></option>
+						</select>
+					</div>
+					<div class="layui-input-inline" th:if="${Choose}">
+						<a th:href="@{|/shiyan/addLastQuest/${arrangeId}|}" class="layui-btn">新建</a>
+					</div>
+				</div>
+			</form>
+			<table class="layui-table" th:if="${Choose}">
+				<thead>
+					<tr>
+						<th>问题序号</th>
+						<th>题目</th>
+						<th>分值(链接)</th>
+						<th>实验模块号</th>
+						<th>问题类型</th>
+						<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="Quest:${termList.content}">
+						<td th:text="${Quest.questOrder}"></td>
+						<td th:text="${Quest.questDescribe}"></td>
+						<td th:text="${Quest.questScore}"></td>
+						<td th:text="${Quest.mId}"></td>
+						<td th:text="${Quest.questType}"></td>
+						<td>
+							<a class="layui-btn layui-btn-sm" th:href="@{|/shiyan/updateLastQuest/${Quest.questId}/${arrangeId}|}">修改</a>
+							<button class="layui-btn layui-btn-sm layui-btn-danger delBtn" th:data-id="${Quest.questId}">删除</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<div id="pager" th:if="${Choose}"></div>
+			<input type="hidden" id="totalCount" th:if="${Choose}" th:value="${termList.totalElements}" />
+			<input type="hidden" id="currentPage" th:if="${Choose}" th:value="${termList.number}" />
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var form = layui.form,
+					laypage = layui.laypage
+				laypage.render({
+					elem: 'pager',
+					layout: ['count', 'prev', 'page', 'next'],
+					curr: parseInt($('#currentPage').val()),
+					count: parseInt($('#totalCount').val()),
+					jump: function (obj, first) {
+						if (!first) {
+							window.location.href = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+						}
+					}
+				})
+				form.on('select(id)', function (data) {
+					if (data.value) {
+						window.location.href = data.value
+					}
+				})
+				$('.delBtn').click(function (e) {
+					e.preventDefault()
+					var _id = $(this).data('id')
+					layer.confirm(
+						'确认要删除吗？',
+						{
+							btn: ['确认', '取消']
+						},
+						function () {
+							window.location.href = '/shiyan/deleteLastQuest/' + _id
+						}
+					)
+				})
+			})
+		</script>
+	</body>
 </html>
