退出系统清除

--- a/src/main/resources/templates/405.html
+++ b/src/main/resources/templates/405.html
@@ -57,7 +57,7 @@
 			<p>对不起，您没有权限请求此连接！</p>
 			<p>如果已经完成单点登录，请与管理员联系，开通相关权限</p>
 			<p>如果未完成单点登录，请点击</p>
-			<p><a href="http://tysf.sctu.edu.cn:8071/sso//login?service=http://172.17.55.112:8889/shiro-cas">取登录</a></p>
+			<p><a href="http://tysf.sctu.edu.cn:8071/sso//login?service=http://172.17.55.112:8889/shiro-cas">去登录</a></p>
 		</div>
 	</body>
 </html>
