07-20-01-Charlie-学生管理页面及弹窗、权限管理页面及弹窗和其他细节优化

--- a/src/main/resources/templates/student/class_administer.html
+++ b/src/main/resources/templates/student/class_administer.html
@@ -31,10 +31,10 @@
 					<input type="text" name="class_name" placeholder="请输入班级名称" autocomplete="off" class="layui-input" />
 				</div>
 				<div class="layui-input-inline">
-					<button type="submit" class="layui-btn" lay-submit>搜索</button>
+					<button type="submit" class="layui-btn layui-btn-sm" lay-submit>搜索</button>
 				</div>
 				<div class="layui-input-inline">
-					<a type="button" class="layui-btn addBtn" th:data-url="@{/studentManage/toAddClass}">添加班级</a>
+					<a type="button" class="layui-btn layui-btn-sm addBtn" th:data-url="@{/studentManage/toAddClass}">添加班级</a>
 				</div>
 			</form>
 			<div class="layui-row layui-col-space15">
