--- a/src/main/resources/templates/jichu/timePlan_management.html
+++ b/src/main/resources/templates/jichu/timePlan_management.html
@@ -1,188 +1,176 @@
 <!DOCTYPE html>
 <html class="x-admin-sm" lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>课程安排管理</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <script src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
+	<head>
+		<meta charset="UTF-8" />
+		<title>课程安排管理</title>
+		<meta name="renderer" content="webkit" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+		<link rel="stylesheet" href="../../static/css/font.css" />
+		<link rel="stylesheet" href="../../static/css/layui.css" />
+		<link rel="stylesheet" href="../../static/css/xadmin.css" />
+		<script src="../../static/js/layui.js" charset="utf-8"></script>
+		<script type="text/javascript" src="../../static/js/xadmin.js"></script>
+	</head>
+	<style>
+		.text-overflow {
+			display: block; /*内联对象需加*/
+			width: 31em; /*指定宽度*/
+			word-break: keep-all; /* 不换行 */
+			white-space: nowrap; /* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
+			overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
+			text-overflow: ellipsis; /* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
+		}
 
-</head>
-<style>
-    .text-overflow {
-        display:block;/*内联对象需加*/
-        width:31em;/*指定宽度*/
-        word-break:keep-all;/* 不换行 */
-        white-space:nowrap;/* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-        text-overflow:ellipsis;/* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-    }
+		table {
+			width: 30em;
+			table-layout: fixed; /* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
+		}
+		.layui-table th {
+			text-align: center;
+			font-weight: 900;
+		}
+		td {
+			text-align: center;
+			width: 100%;
+			word-break: keep-all; /* 不换行 */
+			white-space: nowrap; /* 不换行 */
+			overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
+			text-overflow: ellipsis; /* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
+		}
+		ul li {
+			display: flex;
+			position: absolute;
+			margin-right: 25%;
+		}
+		.choice-box {
+			width: 70%;
+			/*float: left;*/
+			/*position: relative;*/
+		}
+		label {
+			width: 35%;
+			margin: 0;
+		}
+	</style>
+	<body>
+		<div class="layui-fluid">
+			<div class="layui-row layui-col-space15">
+				<div class="layui-col-md12">
+					<div class="layui-card">
+						<div class="layui-card-body" style="margin-bottom: 3%;">
+							<form class="layui-form layui-col-space5" action="/arrangeclass/mhlist" method="post">
+								<ul>
+									<li style="margin-left: 3%;">
+										<div class="layui-form-item choice-box">
+											<label class="layui-form-label">课程</label>
+											<div class="layui-input-block">
+												<select name="courseName" lay-filter="aihao">
+													<option value="">请选择课程</option>
+													<a th:each="courseInfo:${courseInfoList}">
+														<option th:value="${courseInfo.getCourseName()}">[[${courseInfo.courseName}]]</option>
+													</a>
+												</select>
+											</div>
+										</div>
+									</li>
+									<li style="margin-left: 20%;">
+										<div class="layui-form-item choice-box">
+											<label class="layui-form-label">教师</label>
+											<div class="layui-input-block">
+												<select name="teacherName" lay-filter="aihao">
+													<option value="">请选择教师</option>
+													<a th:each="user:${userList}">
+														<option th:value="${user.getNickname()}">[[${user.nickname}]]</option>
+													</a>
+												</select>
+											</div>
+										</div>
+									</li>
+									<li style="margin-left: 35%;">
+										<div class="layui-form-item choice-box">
+											<label class="layui-form-label">班级</label>
+											<div class="layui-input-block">
+												<select name="className" lay-filter="aihao">
+													<option value="">请选择班级</option>
+													<a th:each="class:${classList}">
+														<option th:value="${class.getClassName()}">[[${class.className}]]</option>
+													</a>
+												</select>
+											</div>
+										</div>
+									</li>
+									<li style="margin-left: 50%;">
+										<div class="layui-input-block">
+											<button type="submit" class="layui-btn">检索</button>
+										</div>
+									</li>
+									<li style="float: right;">
+										<div class="layui-inline layui-show-xs-block">
+											<a href="/arrangeclass/add" class="layui-btn"><i class="layui-icon"></i>增加</a>
+										</div>
+									</li>
+								</ul>
+							</form>
+						</div>
 
-    table{
-        width:30em;
-        table-layout:fixed;/* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-    }
-    .layui-table th{
-        text-align: center;
-        font-weight: 900;
-    }
-    td{
-        text-align: center;
-        width:100%;
-        word-break:keep-all;/* 不换行 */
-        white-space:nowrap;/* 不换行 */
-        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-        text-overflow:ellipsis;/* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-    }
-    ul li {
-        display: flex;
-        position: absolute;
-        margin-right:25%;
-    }
-    .choice-box{
-        width: 70%;
-        /*float: left;*/
-        /*position: relative;*/
-    }
-    label{
-        width: 35%;
-        margin: 0;
-    }
+						<div class="layui-card-body">
+							<table class="layui-table layui-form">
+								<thead>
+									<tr>
+										<th>ID</th>
+										<th>课程名</th>
+										<th>教师</th>
+										<th>班级</th>
+										<th>上课教室名</th>
+										<th>开始时间</th>
+										<th>结束时间</th>
+										<th>操作</th>
+									</tr>
+								</thead>
 
-</style>
-<body>
-<div class="x-nav">
-    <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
-        <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>
-</div>
+								<tbody>
+									<tr th:each="arrangeClass:${ArrangeClassDto}">
+										<td th:text="${arrangeClass.getId()}">1</td>
+										<td th:text="${arrangeClass.getCourseName()}">JAVA</td>
+										<td th:text="${arrangeClass.getTeacherName()}">wen</td>
+										<td th:text="${arrangeClass.getClassName()}">18信管03</td>
+										<td th:text="${arrangeClass.getSkAddress()}">A103</td>
+										<td th:text="${arrangeClass.getArrangeStart()}">2020/2/1</td>
+										<td th:text="${arrangeClass.getArrangeEnd()}">2020/2/1</td>
 
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-body " style="margin-bottom: 3%">
+										<td class="td-manage">
+											<a th:href="@{|${arrangeClass.id}/update|}" class="layui-btn layui-btn-primary layui-bg-red" lay-submit>修改</a>
+											<a th:href="@{|${arrangeClass.id}/delete|}" class="layui-btn layui-btn-primary layui-bg-green" lay-submit>删除</a>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="layui-card-body">
+							<div style="margin: 0 auto; width: 80%; text-align: center;">
+								<p>当前 <span th:text="${ArrangeClassDto.number}+1"></span> 页, 总 <span th:text="${ArrangeClassDto.totalPages}"></span> 页, 共 <span th:text="${ArrangeClassDto.totalElements}"></span> 条记录</p>
+								<a th:href="@{/arrangeclass/list}">首页</a>
+								<a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.hasPrevious()}?${ArrangeClassDto.number}-1:0)}">上一页</a>
+								<a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.hasNext()}?${ArrangeClassDto.number}+1:${ArrangeClassDto.number})}">下一页</a>
+								<a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.totalPages}-1)}">尾页</a>
+							</div>
 
-                    <form class="layui-form layui-col-space5" action="/arrangeclass/mhlist" method="post">
-                        <ul>
-                            <li style="margin-left:3%">
-                                <div class="layui-form-item choice-box" >
-                                    <label class="layui-form-label ">课程</label>
-                                    <div class="layui-input-block">
-                                        <select name="courseName" lay-filter="aihao">
-                                            <option value="">请选择课程</option>
-                                            <a th:each="courseInfo:${courseInfoList}">
-                                                <option th:value="${courseInfo.getCourseName()}">[[${courseInfo.courseName}]]</option>
-                                            </a>
-                                        </select>
-                                    </div>
-                                </div>
-                            </li>
-                            <li style="margin-left:20%">
-                                <div class="layui-form-item choice-box" >
-                                    <label class="layui-form-label ">教师</label>
-                                    <div class="layui-input-block">
-                                        <select name="teacherName" lay-filter="aihao">
-                                            <option value="">请选择教师</option>
-                                            <a th:each="user:${userList}">
-                                                <option th:value="${user.getNickname()}">[[${user.nickname}]]</option>
-                                            </a>
-                                        </select>
-                                    </div>
-                                </div>
-                            </li>
-                            <li style="margin-left:35%">
-                                <div class="layui-form-item choice-box" >
-                                    <label class="layui-form-label ">班级</label>
-                                    <div class="layui-input-block">
-                                        <select name="className" lay-filter="aihao">
-                                            <option value="">请选择班级</option>
-                                            <a th:each="class:${classList}">
-                                                <option th:value="${class.getClassName()}">[[${class.className}]]</option>
-                                            </a>
-                                        </select>
-                                    </div>
-                                </div>
-                            </li>
-                            <li style="margin-left:50%">
-                                <div class="layui-input-block">
-                                    <button type="submit" class="layui-btn" >检索</button>
-
-                                </div>
-                            </li>
-                            <li style="float: right">
-                                <div class="layui-inline layui-show-xs-block">
-                                    <a href="/arrangeclass/add" class="layui-btn" ><i class="layui-icon"></i>增加</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </form>
-                </div>
-
-                <div class="layui-card-body ">
-                    <table class="layui-table layui-form">
-                        <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>课程名</th>
-                            <th>教师</th>
-                            <th>班级</th>
-                            <th>上课教室名</th>
-                            <th>开始时间</th>
-                            <th>结束时间</th>
-                            <th>操作</th>
-                        </thead>
-                        <tbody>
-                        <tr th:each="arrangeClass:${ArrangeClassDto}">
-                            <td th:text="${arrangeClass.getId()}">1</td>
-                            <td th:text="${arrangeClass.getCourseName()}">JAVA</td>
-                            <td th:text="${arrangeClass.getTeacherName()}">wen</td>
-                            <td th:text="${arrangeClass.getClassName()}">18信管03</td>
-                            <td th:text="${arrangeClass.getSkAddress()}">A103</td>
-                            <td th:text="${arrangeClass.getArrangeStart()}">2020/2/1</td>
-                            <td th:text="${arrangeClass.getArrangeEnd()}">2020/2/1</td>
-
-                            <td class="td-manage">
-                                <a th:href="@{|${arrangeClass.id}/update|}" class="layui-btn layui-btn-primary layui-bg-red" lay-submit>修改</a>
-                                <a th:href="@{|${arrangeClass.id}/delete|}" class="layui-btn layui-btn-primary layui-bg-green" lay-submit>删除</a>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="layui-card-body ">
-
-                    <div style="margin:0 auto; width: 80%; text-align: center;">
-                        <p>当前 <span th:text="${ArrangeClassDto.number}+1"></span> 页,
-                            总 <span th:text="${ArrangeClassDto.totalPages}"></span> 页,
-                            共 <span th:text="${ArrangeClassDto.totalElements}"></span> 条记录</p>
-                        <a th:href="@{/arrangeclass/list}">首页</a>
-                        <a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.hasPrevious()}?${ArrangeClassDto.number}-1:0)}">上一页</a>
-                        <a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.hasNext()}?${ArrangeClassDto.number}+1:${ArrangeClassDto.number})}">下一页</a>
-                        <a th:href="@{/arrangeclass/list(pageNum=${ArrangeClassDto.totalPages}-1)}">尾页</a>
-                    </div>
-
-                    <!--                    <div class="page">-->
-                    <!--                        <div>-->
-                    <!--                            <a class="prev" href="">&lt;&lt;</a>-->
-                    <!--                            <a class="num" href="">1</a>-->
-                    <!--                            <span class="current">2</span>-->
-                    <!--                            <a class="num" href="">3</a>-->
-                    <!--                            <a class="num" href="">489</a>-->
-                    <!--                            <a class="next" href="">&gt;&gt;</a>-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-
-</body>
-
+							<!--                    <div class="page">-->
+							<!--                        <div>-->
+							<!--                            <a class="prev" href="">&lt;&lt;</a>-->
+							<!--                            <a class="num" href="">1</a>-->
+							<!--                            <span class="current">2</span>-->
+							<!--                            <a class="num" href="">3</a>-->
+							<!--                            <a class="num" href="">489</a>-->
+							<!--                            <a class="next" href="">&gt;&gt;</a>-->
+							<!--                        </div>-->
+							<!--                    </div>-->
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
+	</body>
 </html>
