--- a/src/main/resources/templates/res/add.html
+++ b/src/main/resources/templates/res/add.html
@@ -1,61 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <!--<script type="text/javascript" src="../js/jquery-1.11.3.min.js"></script>-->
-    <title>Title</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-</head>
-<body>
-<div class="x-nav" style="margin-bottom: 30px">
-          <span class="layui-breadcrumb" style="visibility: visible">
-            <a th:href="@{|/admin/res/list|}">资源列表</a>
-            <span lay-separator>/</span>
-            <a>
-              <cite>添加资源</cite>
-            </a>
-          </span>
-
-</div>
-<div id="content" class="layui-fluid">
-    <form class="layui-form" role="form" method="post" th:object="${res}" id="addForm">
-        <div class="layui-form-item">
-            <label for="L_email" class="layui-form-label">
-                <span class="x-red">*</span>res名称:</label>
-            <div class="layui-input-inline">
-                <input type="text" id="L_email" name="class_collage" required=""
-                       th:field="${res.name}"
-                       lay-verify="nickname" autocomplete="off" class="layui-input"></div>
-        </div>
-        <div class="layui-form-item">
-            <label  class="layui-form-label">
-                <span class="x-red">*</span>res地址:</label>
-            <div class="layui-input-inline">
-                <input type="text" id="L_username" name="class_major"
-                       th:field="${res.url}"
-                       required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
-        </div>
-        <div class="layui-form-item">
-            <label for="L_pass" class="layui-form-label">
-                <span class="x-red">*</span>res权限字符串:</label>
-            <div class="layui-input-inline">
-                <input type="text" id="L_pass"  name="class_grade"
-                       th:field="${res.permission}"
-                       required="" lay-verify="pass" autocomplete="off" class="layui-input"></div>
-        </div>
-
-        <div class="layui-btn-container" style="margin-left: 130px">
-            <input type="submit" class="layui-btn" value="添加资源"/>
-            <a class="layui-btn layui-btn-primary" th:href="@{|/admin/res/list|}">返回</a>
-        </div>
-    </form>
-</div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>添加资源</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			.layui-form-label {
+				width: 100px;
+			}
+			.layui-form-item .layui-input-inline,
+			.layui-input-block {
+				margin-left: 130px;
+			}
+		</style>
+	</head>
+	<body>
+		<form class="layui-form" role="form" method="post" th:object="${res}" style="padding: 30px 20px 0 0;">
+			<div class="layui-form-item">
+				<label class="layui-form-label">res名称:</label>
+				<div class="layui-input-inline">
+					<input type="text" name="class_collage" th:field="${res.name}" lay-verify="required" autocomplete="off" class="layui-input" />
+				</div>
+			</div>
+			<div class="layui-form-item">
+				<label class="layui-form-label">res地址:</label>
+				<div class="layui-input-inline">
+					<input type="text" name="class_major" th:field="${res.url}" lay-verify="required" autocomplete="off" class="layui-input" />
+				</div>
+			</div>
+			<div class="layui-form-item">
+				<label class="layui-form-label">res权限字符串:</label>
+				<div class="layui-input-inline">
+					<input type="text" name="class_grade" th:field="${res.permission}" lay-verify="required" autocomplete="off" class="layui-input" />
+				</div>
+			</div>
+			<div class="layui-form-item">
+				<div class="layui-input-block">
+					<button type="submit" class="layui-btn" lay-submit="">添加</button>
+					<a class="layui-btn layui-btn-primary closeBtn">返回</a>
+				</div>
+			</div>
+		</form>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var index = parent.layer.getFrameIndex(window.name)
+				$('.closeBtn').click(function (e) {
+					e.preventDefault()
+					parent.layer.close(index)
+				})
+			})
+		</script>
+	</body>
 </html>
