--- a/src/main/resources/templates/res/list.html
+++ b/src/main/resources/templates/res/list.html
@@ -1,55 +1,78 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="layout :: htmlhead" th:with="title='后台管理'">
-    <meta charset="UTF-8"/>
-    <title>资源表示</title>
-</head>
-<body>
-<div th:include="res/inc :: head"></div>
-<div class="x-nav" style="margin-bottom: 30px">
-          <span class="layui-breadcrumb">
-            <a href="">资源管理</a>
-            <a>
-              <cite>资源列表</cite></a>
-          </span>
-</div>
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-body">
-                    <div class="layui-inline">
-                        <a class="admin_link layui-btn" href="/admin/res/add">添加资源</a>
-                        <!--<a class="layui-btn" lay-filter="add" lay-submit>添加资源</a>-->
-                    </div>
-                    <table class="layui-table layui-form">
-                        <thead>
-                        <th>资源表示</th>
-                        <th>名称</th>
-                        <th>URL</th>
-                        <th>权限字符串</th>
-                        <th>操作</th>
-                        </thead>
-                        <tbody>
-                        <tr th:each="res:${reses}">
-                            <td th:text="${res.id}"></td>
-                            <td th:text="${res.name }">
-                            <td th:text="${res.url }"></td>
-                            <td th:text="${res.permission }">&nbsp;</td>
-                            <td>
-                                <a th:href="@{|/admin/res/update/${res.id }|}" class="list_op layui-btn" type="button">更新</a>&nbsp;
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="../../static/js/jquery-3.4.1.min.js" th:href="@{/js/jquery-3.4.1.min.js}" type="text/javascript"
-        charset="utf-8"></script>
-<script src="../../static/js/layui.all.js" th:href="@{/js/layui.all.js}" type="text/javascript"
-        charset="utf-8"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>资源列表</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<div>
+				<button type="button" class="layui-btn layui-btn-sm addBtn">添加资源</button>
+			</div>
+			<table class="layui-table">
+				<thead>
+					<tr>
+						<th>资源表示</th>
+						<th>名称</th>
+						<th>URL</th>
+						<th>权限字符串</th>
+						<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="res:${reses}">
+						<td th:text="${res.id}"></td>
+						<td th:text="${res.name}"></td>
+						<td th:text="${res.url}"></td>
+						<td th:text="${res.permission}"></td>
+						<td><a th:data-url="@{|/admin/res/update/${res.id}|}" class="layui-btn layui-btn-sm updateBtn">更新</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var layer = layui.layer
+				$('.addBtn').click(function (e) {
+					e.preventDefault()
+					layer.open({
+						type: 2,
+						title: '添加资源',
+						shade: 0.1,
+						shadeClose: false,
+						area: ['400px', '350px'],
+						content: '/admin/res/add'
+					})
+				})
+				$('.updateBtn').click(function (e) {
+					e.preventDefault()
+					var _url = $(this).data('url')
+					layer.open({
+						type: 2,
+						title: '更新资源',
+						shade: 0.1,
+						shadeClose: false,
+						area: ['400px', '350px'],
+						content: _url
+					})
+				})
+			})
+		</script>
+	</body>
 </html>
