--- a/src/main/resources/templates/role/add.html
+++ b/src/main/resources/templates/role/add.html
@@ -1,52 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>角色添加</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-</head>
-<body>
-
-<div th:include="role/inc :: head"></div>
-
-<div class="x-nav" style="margin-bottom: 30px">
-          <span class="layui-breadcrumb">
-            <a th:href="@{|/admin/role/list|}">角色列表</a>
-            <a>
-              <cite>角色添加</cite></a>
-          </span>
-</div>
-
-<div class="layui-fluid">
-    <div class="layui-row">
-        <form class="layui-form" role="form" th:method="post" th:object="${role}" id="addForm">
-            <div class="layui-form-item">
-                <label for="L_email" class="layui-form-label">
-                    <span class="x-red">*</span>角色名称：</label>
-                <div class="layui-input-inline">
-                    <input type="text" id="L_email" th:field="${role.name}" name="class_collage" required="" lay-verify="nickname" autocomplete="off" class="layui-input"></div>
-            </div>
-            <div class="layui-form-item">
-                <label  class="layui-form-label">
-                    <span class="x-red">*</span>角色SN：</label>
-                <div class="layui-input-inline">
-                    <input type="text" id="L_username" th:field="${role.sn}" name="class_major"  required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
-            </div>
-
-            <div class="layui-btn-container" style="margin-left: 130px">
-                <input type="submit" class="layui-btn" value="添加">
-                <a class="layui-btn layui-btn-primary" th:href="@{|/admin/role/list|}">返回</a>
-            </div>
-        </form>
-    </div>
-</div>
-<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>添加角色</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+	</head>
+	<body>
+		<form class="layui-form" role="form" th:method="post" th:object="${role}" style="padding: 30px 20px 0 0;">
+			<div class="layui-form-item">
+				<label class="layui-form-label">角色名称：</label>
+				<div class="layui-input-inline">
+					<input type="text" th:field="${role.name}" name="class_collage" lay-verify="required" autocomplete="off" class="layui-input" />
+				</div>
+			</div>
+			<div class="layui-form-item">
+				<label class="layui-form-label">角色SN：</label>
+				<div class="layui-input-inline">
+					<input type="text" th:field="${role.sn}" name="class_major" lay-verify="required" autocomplete="off" class="layui-input" />
+				</div>
+			</div>
+			<div class="layui-form-item">
+				<div class="layui-input-block">
+					<button type="submit" class="layui-btn" lay-submit="">添加</button>
+					<a class="layui-btn layui-btn-primary closeBtn">返回</a>
+				</div>
+			</div>
+		</form>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var layer = layui.layer,
+					index = parent.layer.getFrameIndex(window.name)
+				$('.closeBtn').click(function (e) {
+					e.preventDefault()
+					parent.layer.close(index)
+				})
+			})
+		</script>
+	</body>
 </html>
