--- a/src/main/resources/templates/role/list.html
+++ b/src/main/resources/templates/role/list.html
@@ -1,78 +1,91 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
-<head th:include="layout :: htmlhead" th:with="title='后台管理'">
-    <meta charset="UTF-8"/>
-    <title>角色表示</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <script src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css">
-
-    <style>
-        .layui-table th {
-            text-align: center;
-            font-weight: 900;
-        }
-        .layui-table td {
-            text-align: center;
-
-        }
-    </style>
-</head>
-<body>
-<div class="x-nav" style="margin-bottom: 30px">
-          <span class="layui-breadcrumb">
-            <a href="">角色管理</a>
-            <!--<a href="">XX</a>-->
-            <a>
-              <cite>角色列表</cite></a>
-          </span>
-</div>
-<div th:include="role/inc :: head"></div>
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-body">
-                    <div class="layui-inline">
-                        <a href="/admin/role/add" class="admin_link layui-btn">添加角色</a>
-                        <!--<button class="layui-btn" lay-filter="add" lay-submit>添加角色</button>-->
-                    </div>
-                    <table class="layui-table layui-form">
-
-                        <thead>
-                        <tr>
-                            <td>角色标识</td>
-                            <td>角色名称</td>
-                            <td>角色sn</td>
-                            <td>操作</td>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="role:${roles}">
-                            <td th:text="${role.id}"></td>
-                            <td th:text="${role.name }">
-                            <td th:text="${role.sn }"></td>
-                            <td>
-                                <a class="layui-btn list_op" th:href="@{|update/${role.id }|}" >更新</a>
-                                &nbsp;
-                                <a class="layui-btn list_op" th:href="@{|listRes/${role.id }|}">查询管理资源</a>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-</body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>角色列表</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<div>
+				<button type="button" class="layui-btn layui-btn-sm addBtn">添加角色</button>
+			</div>
+			<table class="layui-table">
+				<thead>
+					<tr>
+						<td>角色标识</td>
+						<td>角色名称</td>
+						<td>角色sn</td>
+						<td>操作</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="role:${roles}">
+						<td th:text="${role.id}"></td>
+						<td th:text="${role.name}"></td>
+						<td th:text="${role.sn}"></td>
+						<td>
+							<a class="layui-btn layui-btn-sm updateBtn" th:data-url="@{|update/${role.id}|}">更新</a>
+							<a class="layui-btn layui-btn-sm viewBtn" th:data-url="@{|listRes/${role.id}|}">查询管理资源</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var layer = layui.layer
+				$('.addBtn').click(function (e) {
+					e.preventDefault()
+					layer.open({
+						type: 2,
+						title: '添加角色',
+						shade: 0.1,
+						shadeClose: false,
+						area: ['400px', '280px'],
+						content: '/admin/role/add'
+					})
+				})
+				$('.updateBtn').click(function (e) {
+					e.preventDefault()
+					var _url = $(this).data('url')
+					layer.open({
+						type: 2,
+						title: '更新角色',
+						shade: 0.1,
+						shadeClose: false,
+						area: ['400px', '280px'],
+						content: _url
+					})
+				})
+				$('.viewBtn').click(function (e) {
+					e.preventDefault()
+					var _url = $(this).data('url')
+					layer.open({
+						type: 2,
+						title: '查询管理资源',
+						shade: 0.1,
+						shadeClose: false,
+						area: ['800px', '450px'],
+						content: _url
+					})
+				})
+			})
+		</script>
+	</body>
 </html>
