--- a/src/main/resources/templates/role/res.html
+++ b/src/main/resources/templates/role/res.html
@@ -1,114 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="../../static/css/font.css" th:href="@{/css/font.css}">
-    <link rel="stylesheet" href="../../static/css/xadmin.css" th:href="@{/css/xadmin.css}">
-    <link rel="stylesheet" href="../../static/css/layui.css" th:href="@{/css/layui.css}">
-    <script src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css">
-    <script type="text/javascript" th:src="@{/js/jquery-2.1.1.min.js}"></script>
-    <script type="text/javascript">
-        $(function () {
-            var hasReses = new Array();
-            $(".hasRes").each(function () {
-                hasReses.push($(this).val());
-            });
-            $(".setPermission").each(function () {
-                if ($.inArray($(this).val(), hasReses) >= 0) {
-                    $(this).attr("checked", "checked");
-                }
-            });
-            $(".setPermission").click(function () {
-                var c = 0;
-                if (this.checked) {
-                    c = 1;
-                }
-                var resId = $(this).val();
-                var roleId = $("#roleId").val();
-                // console.log("resId:"+resId + "roleId:"+roleId + "c:"+c);
-                $.post("/admin/role/setRes", {c: c, resId: resId, roleId: roleId}, function (data) {
-                });
-            });
-        });
-    </script>
-    <style>
-        .d1{
-            margin-left:1rem;
-            margin-right:1rem;
-            padding-top: 0.5rem;
-            /*margin-bottom: 0.5rem;*/
-            line-height: 2rem;
-            font-size: 15px;
-            /*display: flex;*/
-            /*float: left;*/
-            width: auto;
-            height: 40px;
-        }
-        .d2{
-            float: right;
-        }
-        .d3{
-            float: left;
-        }
-    </style>
-</head>
-<body>
-
-<div class="x-nav" style="margin-bottom: 30px">
-          <span class="layui-breadcrumb" style="visibility: visible">
-            <a th:href="@{|/admin/role/list|}">角色列表</a>
-            <span lay-separator>/</span>
-            <a>
-              <cite>查询管理资源</cite></a>
-          </span>
-</div>
-<div th:include="role/inc :: head"></div>
-<div class="layui-fluid">
-
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="d1">
-                    <div class="d3">
-                        <p th:text=" ${role.name }+'----'+${role.sn}"></p>
-                        <input type="hidden" id="roleId" th:value="${role.id }"/>
-                    </div>
-
-                    <div class="d2">
-                        <a class="layui-btn" th:href="@{|/admin/role/list|}" href="list.html">返回</a>
-                    </div>
-                </div>
-                <div class="layui-card-body">
-                    <table class="layui-table layui-form">
-                        <thead>
-                        <tr>
-                            <td>资源名称</td>
-                            <td>资源url</td>
-                            <td>资源权限字符串</td>
-                            <td>操作</td>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <span th:each="rid:${rids}">
-                            <input type="hidden" class="hasRes" name="hasRole" th:value="${rid}"/></span>
-                        <tr th:each="res:${reses}">
-                            <td th:text="${res.name }"></td>
-                            <td th:text="${res.url}"></td>
-                            <td th:text="${res.permission }">&nbsp;</td>
-                            <td>
-                                <input type="checkbox" name="setPermission" class="setPermission" th:value="${res.id}" style="display: inherit"/>
-                                &nbsp;
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>角色列表</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px 0 0 0;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<p th:text="'角色：' + ${role.name }+' - SN：'+${role.sn}" style="line-height: 40px; text-indent: 5px;"></p>
+			<table class="layui-table">
+				<thead>
+					<tr>
+						<td>资源名称</td>
+						<td>资源url</td>
+						<td>资源权限字符串</td>
+						<td>操作</td>
+					</tr>
+				</thead>
+				<tbody>
+					<input type="hidden" class="hasRes" name="hasRole" th:each="rid:${rids}" th:value="${rid}" />
+					<tr th:each="res:${reses}">
+						<td th:text="${res.name }"></td>
+						<td th:text="${res.url}"></td>
+						<td th:text="${res.permission }"></td>
+						<td>
+							<input type="checkbox" name="setPermission" class="setPermission" th:value="${res.id}" lay-skin="primary" />
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<div style="text-align: center;"><a class="layui-btn closeBtn">返回</a></div>
+			<input type="hidden" id="roleId" th:value="${role.id}" />
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var layer = layui.layer
+				var index = parent.layer.getFrameIndex(window.name)
+				var hasReses = new Array()
+				$('.hasRes').each(function () {
+					hasReses.push($(this).val())
+				})
+				$('.setPermission').each(function () {
+					if ($.inArray($(this).val(), hasReses) >= 0) {
+						$(this).attr('checked', 'checked')
+					}
+				})
+				$('.setPermission').click(function () {
+					var c = 0
+					if (this.checked) {
+						c = 1
+					}
+					var resId = $(this).val()
+					var roleId = $('#roleId').val()
+					$.post('/admin/role/setRes', { c: c, resId: resId, roleId: roleId }, function (data) {
+						layer.msg('操作成功')
+					})
+				})
+				$('.closeBtn').click(function (e) {
+					e.preventDefault()
+					parent.layer.close(index)
+				})
+			})
+		</script>
+	</body>
 </html>
