--- a/src/main/resources/templates/student/student_alter.html
+++ b/src/main/resources/templates/student/student_alter.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="../../static/css/layui.css" />
 		<link rel="stylesheet" href="../../static/css/xadmin.css" />
 	</head>
-	<body>
+	<body style="background: #fff;">
 		<div class="layui-fluid">
 			<div class="layui-row">
 				<form class="layui-form" id="updateForm" th:action="@{|/studentManage/editStudent/${stu.id}|}" method="post" th:object="${stu}">
@@ -34,7 +34,7 @@
 							<div id="msg1" style="color: red; font-size: 18px; width: 100%; height: 5%; text-align: center;"></div>
 						</div>
 					</div>
-					<div class="layui-form-item" style="visibility: hidden; height: 0;">
+					<div class="layui-form-item" style="visibility: hidden; height: 0; overflow: hidden; margin: 0;">
 						<label class="layui-form-label">班级</label>
 						<div class="layui-input-inline">
 							<select name="classid">
