师资队伍过滤，问答bug修复

--- a/src/main/resources/templates/kuangjia/frameHasShiro.html
+++ b/src/main/resources/templates/kuangjia/frameHasShiro.html
@@ -37,7 +37,7 @@
                             </shiro:hasRole>
                             <shiro:hasRole name="courseleader">
                                 <dl class="layui-nav-child">
-                                    <dd><a class="to-url" data-url="/teachers/list" href="javascript:;">师资队伍</a></dd>
+                                    <dd><a class="to-url" data-url="/teachers/list/-1" href="javascript:;">师资队伍</a></dd>
                                     <dd><a class="to-url" data-url="/learning/list" href="javascript:;">学习效果</a></dd>
                                 </dl>
                             </shiro:hasRole>
