--- a/src/main/resources/templates/role/inc.html
+++ b/src/main/resources/templates/role/inc.html
@@ -9,47 +9,11 @@
     <link rel="stylesheet" href="../../static/css/font.css" th:href="@{/css/font.css}">
     <link rel="stylesheet" href="../../static/css/xadmin.css" th:href="@{/css/xadmin.css}">
     <link rel="stylesheet" href="../../static/css/layui.css" th:href="@{/css/layui.css}">
-    <script src="../../static/js/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
-    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css">
+    <script src="../../static/js/layui.js" charset="utf-8" th:src="@{/js/layui.js}"></script>
+    <script type="text/javascript" src="../../static/js/xadmin.js" th:src="@{/js/xadmin.js}"></script>
+    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css"
+          th:href="@{/css/modules/layer/default/layer.css}">
 </head>
 <body>
-<!--<div th:fragment="head">-->
-<!--<span>-->
-    <!--<div th:include="common :: common"></div>-->
-<!--<a href="/admin/role/add" class="admin_link">添加角色</a>-->
-<!--<a href="/admin/role/list" class="admin_link">角色列表</a>-->
-<!--</span></div>-->
-
-
-<!--<div class="x-nav" style="margin-bottom: 30px">-->
-          <!--<span class="layui-breadcrumb">-->
-            <!--<a href="">XX</a>-->
-            <!--<a href="">XX</a>-->
-            <!--<a>-->
-              <!--<cite>角色XX</cite></a>-->
-          <!--</span>-->
-<!--</div>-->
-
-
-<!--<div class="layui-fluid" th:fragment="head">-->
-    <!--<div class="layui-row layui-col-space15">-->
-        <!--<div class="layui-col-md12">-->
-            <!--<div class="layui-card">-->
-                <!--<div class="layui-card-body">-->
-                    <!--<span class="layui-inline">-->
-                        <!--<div th:include="common :: common"></div>-->
-                        <!--<a href="/admin/role/add" class="admin_link layui-btn">添加角色</a>-->
-                        <!--<a href="/admin/role/list" class="admin_link layui-btn">角色列表</a>-->
-                        <!--&lt;!&ndash;<button class="layui-btn" lay-filter="add" lay-submit>添加角色</button>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<button class="layui-btn" lay-filter="list" lay-submit>角色列表</button>&ndash;&gt;-->
-                    <!--</span>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!--<script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>-->
-<!--<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>-->
 </body>
 </html>
